2011-01-26  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc_postgres.n:
	Added empty comment at the start of each manpage because 'man'
	interprets comments there as directives.
	
2011-01-23  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbcpostgres.c: Modified to pass '@' through into the
				  native SQL to allow session variables.
				  Fixed a pointer smash if the argument
				  to "$connection prepare" includes no
				  SQL statement (e.g. contains only whitespace)
	* library/tdbcpostgres.tcl: Added 'nextresults' method, which always
				    returns 0 since PostgreSQL calls return
				    single result sets.
	* tests/tdbcpostgres.test: Added test cases (30.0 and 30.1) for the
	                           above.
	* configure.in: Added a missing stanza of code for finding the tdbc
	                library and include in the build dir when building
	                against an uninstalled tdbc. Thanks to Konstantin
	                Khomoutov for reporting this error.
	* configure: autoconf2.59

2010-09-03  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbcpostgres.c:
			Made the '-port' option work. (Discovered bug when
			testing on a machine where Postgres was listening
			on 5433 but the client lib wanted 5432.)

	* tests/tdbcpostgres.test:
			Changed 'keySequence' in 'foreignkeys' to be
			'ordinalPosition' for consistency with 'primaryKeys'.

	* configure.in:
	* Makefile.in:
	* pkgIndex.tcl.in (new file):
	* README:
	* tclconfig/:	Upgraded the build to use TEA 3.9. Changed the
			approach to pkgIndex.tcl generation. (It's now built
			at configure time, rather than from the Makefile.)
			Advanced version number to 1.0b16.

	* configure: 	autoconf 2.59

2010-06-19  Kevin B. Kenny  <kennykb@acm.org>

	* Makefile.in:			Revised the code at the suggestion
	* generic/tdbcpostgres.c:	of Andreas Kupries to avoid using
	* tests/all.tcl:		'tcl_findLibrary' and instead execute
	* tests/tdbcpostgres.test:	both 'source' and 'load' commands from